--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
                 <h4 class="fs-3">Future is now.</h4>
             </div>
         </header>
-        <div class="display-column align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-3 mt-sm-0 mt-md-0 mt-lg-4">
-            <h6> 
-                Pick one of our three Adrenaline Level Packages - Mild, Medium or Extreme - which includes the expert's consultation
+        <div
+            class="display-column align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-3 mt-sm-0 mt-md-0 mt-lg-4">
+            <h6>
+                Pick one of our three Adrenaline Level Packages - Mild, Medium or Extreme - which includes the expert's
+                consultation
                 about your desired adrenaline level, </h6>
-                <h6> choose the length of adventure which best suits you, </h6>
-                <h6> then just fasten your safety belts to get ready for the probably most exiting adventure you ever had!
+            <h6> choose the length of adventure which best suits you, </h6>
+            <h6> then just fasten your safety belts to get ready for the probably most exiting adventure you ever had!
             </h6>
         </div>
         <div
@@ -118,9 +120,9 @@
                     <div class="card-body mild-carousel">
                         <h5 class="card-title">Mild adventure</h5>
                         <p class="card-text">
-                           Do you know how it feels to fly in the hot air baloon, with a deltaplane or a paraglider, 
-                           to dive deep into the beautiful underwater world and how amazing it can be? This and much 
-                           more is waiting for you in our Mild Adventure program!
+                            Do you know how it feels to fly in the hot air baloon, with a deltaplane or a paraglider,
+                            to dive deep into the beautiful underwater world and how amazing it can be? This and much
+                            more is waiting for you in our Mild Adventure program!
                         </p>
                         <a href="./pricing.html" class="d-grid gap-2 btn btn-outline-success">Price</a>
                     </div>
@@ -162,10 +164,11 @@
                     <div class="card-body medium-carousel">
                         <h5 class="card-title">Medium adventure</h5>
                         <p class="card-text">
-                            If you're opened for some more adrenaline and feel ready for challenging yourself to dive even deeper 
-                            and fly even higher to feel even more excited about your growing ability to step out of your comfort zone,
-                            then this package is waiting exactly for you. 
-                            
+                            If you're opened for some more adrenaline and feel ready for challenging yourself to dive
+                            even deeper
+                            and fly even higher to feel even more excited about your growing ability to step out of your
+                            comfort zone,
+                            then this package is waiting exactly for you.
                         </p>
                         <a href="./pricing.html" class="d-grid gap-2 btn btn-outline-primary">Price</a>
                     </div>
@@ -219,7 +222,8 @@
                     <div class="card-body extreme-carousel">
                         <h5 class="card-title">Extreme adventure</h5>
                         <p class="card-text">
-                            If your brave adventurer soul have already experienced lots of exciting, crazy things in your life but you still have a 
+                            If your brave adventurer soul have already experienced lots of exciting, crazy things in
+                            your life but you still have a
                             wish for something more then this package is exactly the right choice for you.
                             Let it surprise you.
                         </p>
@@ -229,7 +233,6 @@
             </div>
         </div>
     </div>
-
     <div class="row footer-row mt-5">
         <div class="footer-text my-3 text-center">
             <h5>Contacts</h5>
