--- a/pricing.html
+++ b/pricing.html
@@ -47,8 +47,8 @@
         <div class="container-sm text-center pricing-middle-content min-vh-100 p-3">
             <h1 class="fw-normal mt-5"> Mild Adventure</h1>
             <p class="mb-4 px-4">
-                Do you know how it feels to fly in the hot air baloon, with a deltaplane or a paraglider, 
-                to dive deep into the beautiful underwater world and how amazing it can be? This and much 
+                Do you know how it feels to fly in the hot air baloon, with a deltaplane or a paraglider,
+                to dive deep into the beautiful underwater world and how amazing it can be? This and much
                 more is waiting for you in our Mild Adventure program!
             </p>
             <div class="row">
@@ -94,9 +94,10 @@
             </div>
             <h1 class="fw-normal mt-5">Medium Adventure</h1>
             <p class="mb-4 px-4">
-                If you're opened for some more adrenaline and feel ready for challenging yourself to dive even deeper 
-                and fly even higher to feel even more excited about your growing ability to step out of your comfort zone,
-                then this package is waiting exactly for you. 
+                If you're opened for some more adrenaline and feel ready for challenging yourself to dive even deeper
+                and fly even higher to feel even more excited about your growing ability to step out of your comfort
+                zone,
+                then this package is waiting exactly for you.
             </p>
             <div class="row">
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
@@ -141,7 +142,8 @@
             </div>
             <h1 class="fw-normal mt-5">Extreme Adventure</h1>
             <p class="mb-4 px-4">
-                If your brave adventurer soul have already experienced lots of exciting, crazy things in your life but you still have a 
+                If your brave adventurer soul have already experienced lots of exciting, crazy things in your life but
+                you still have a
                 wish for something more then this package is exactly the right choice for you.
                 Let it surprise you.
             </p>
@@ -198,7 +200,6 @@
             <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
