--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </header>
         <div
-            class="display-column align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-3 mt-sm-0 mt-md-0 mt-lg-4">
+            class="display-column align-items-center justify-content-center text-center p-2 mx-sm-0 mx-md-0 mx-lg-5 mx-xl-3 mt-sm-0 mt-md-0 mt-lg-4">
             <h6>
                 Pick one of our three Adrenaline Level Packages - Mild, Medium or Extreme - which includes the expert's
                 consultation
