--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                 <h4 class="fs-3">Future is now.</h4>
             </div>
         </header>
-        <div
-            class="display-column align-items-center justify-content-center text-center p-2 mx-sm-0 mx-md-0 mx-lg-5 mx-xl-3 mt-sm-0 mt-md-0 mt-lg-4">
+        <div class="display-column align-items-center justify-content-center text-center py-5 px-3">
             <h6>
                 Pick one of our three Adrenaline Level Packages - Mild, Medium or Extreme - which includes the expert's
                 consultation
@@ -70,8 +69,8 @@
         </div>
         <div
             class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-3 px-md-3 px-lg-5 px-xl-5 d-flex justify-content-center">
-            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-12 col-sm-12 p-4">
-                <div class="card mt-5 p-0 carousel-1-and-description-card">
+            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-12 col-sm-12 px-4">
+                <div class="card p-0 carousel-1-and-description-card">
                     <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
